--- a/globe/templates/base_map.html
+++ b/globe/templates/base_map.html
@@ -29,7 +29,15 @@
 
 
 </head>
+<nav class="navbar navbar-expand-lg navbar-light bg-light main-nav" id="nav">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="/"><img src="/static/img/brand.png" class="img-brand" style="height:2.5rem;" alt="Globe icon logo"></a>
 
+		<div class="nav navbar-nav navbar-right">
+			<a href="/feed/" class="nav-item">Feed</a>
+		</div>
+	</div>
+</nav>
 
     {% block content %}
     {% endblock %}
