--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -1,4 +1,4 @@
-$box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+ar$box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 $box-shadow-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
 
