update rules on index, add padding to sections

--- a/globe/static/scss/main.scss
+++ b/globe/static/scss/main.scss
@@ -3,13 +3,12 @@
 @import 'components';
 
 .intro{
-	position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     overflow: hidden;
-	z-index: -100;
+		z-index: -100;
 }
 
 
@@ -18,8 +17,35 @@
 		font-size: 6em;
 	}
 	h1, h3{
-		color: #f0f0f0;
-		margin-top: 5%;
+		color: #f0f0f0 !important;
+		margin-top: 1em;
+	}
+}
+
+
+section {
+	padding: 2.5% 5%;
+	 p{
+		 margin: 0 auto;
+	 }
+	 h1, h2{
+		 margin: 1.3em 0 1.5em 0;
+	 }
+}
+
+#index-1{
+	margin-top: 20em;
+	h2{
+		margin-top: 0;
+	}
+	p{
+		text-align: center;
+	}
+}
+
+#howItWorks{
+	p, a{
+		text-align: center;
 	}
 }
 
