--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -1,4 +1,4 @@
-ar$box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 $box-shadow-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
 
@@ -28,10 +28,19 @@ $light: #e0e0e0;
 $white: #eaeaea;
 
 
-
+.dark{
+	background :$light;
+}
+.light{
+	background: $white;
+}
 
 body{
 	background: #f2f2f2;
+}
+
+.section{
+	min-height: 66%;
 }
 
 a{
