--- a/globe/templates/user/login.html
+++ b/globe/templates/user/login.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<section class="register">
+<section class="login">
  	<div class="container">
 		<div class="row">
+			<h1>Login</h1>
+		</div>
+		<div class="row">
+			<div class="col-xs-6 col-xs-offset-3" style="margin-left: 25%;">
 				<div class="card" style="width:30rem;">
-					<div class="card-head">
-						<h2 class="card-title">Log In</h2>
-						<h6 class="card-subtitle mb-5">Enter your Email and Password</h6>
-					</div>
 					<div class="card-body">
 						<form class="card-form" method="post" action="/user/login/">
 							<label class="card-label" for="Email">Email</label>
@@ -18,15 +18,16 @@
 							<input class="form-control" name="password" type="password" />
 
 							<div class="text-center">
-								<button type="submit" class="btn btn-glb">Log In</button>
+								<button type="submit" class="btn btn-glb">Login</button>
 							</div>
 					</div>
 				</div>
   		</div>
+		</div>
+		<div class="row text-center register-cta">
+			<h3><a href="/register/">Create an account</a></h3>
+		</div>
 	</div>
 </section>
-
-
-
 
 {% endblock %}
