--- a/globe/templates/base.html
+++ b/globe/templates/base.html
@@ -16,9 +16,8 @@
 
     <!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Roboto" rel="stylesheet">
-
 	<!--
-	<link rel="stylesheet" href="/static/css/font-awesome.css"> -->
+	<link rel="stylesheet" href="/static/css/font-awesome.css">-->
 
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 
@@ -28,6 +27,7 @@
 	<link rel="stylesheet" href="/static/css/remodal.css">
 	<link rel="stylesheet" href="/static/css/remodal-default-theme.css">
 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 
 </head>
 
@@ -115,7 +115,6 @@ if ($('#site-wrapper').hasClass('show-nav')) {
 }
 
 </script>
-	<script src="/static/js/font-awesome.min.js"></script>
 	<script src="/static/js/remodal.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
 
