--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -208,6 +208,74 @@ a:hover{
 		margin-top: 10%;
 	}
 }
+.comment-new{
+	border-top: .3px solid #ccc;
+}
+
+#commentForm{
+	width: 100%;
+	.form-control{
+		width: 75%;
+		display: inline-flex;
+		border: 0;
+	}
+	.submit{
+		display: inline-flex;
+	}
+	img{
+		display: inline-flex;
+	}
+}
+
+.public-comments{
+	.comment{
+		display: block;
+	}
+	p, b{
+		display: inline-block;
+		font-size: .8em;
+	}
+	p{
+		margin-bottom: 0;
+	}
+}
+
+.caption{
+	display: inline-flex;
+	width: 100% !important;
+	.profile-img, p, .likes{
+		display: inline-flex;
+	}
+	.profile-img{
+		width: 4%;
+		margin-right: 5%;
+	}
+	p{
+		width: 90%;
+		margin-top: 1%;
+	}
+	.likes{
+		margin-top: 1%;
+		width: 5%;
+		text-align: right;
+		float: right;
+	}
+}
+.comments{
+	width: 100%;
+	display: inline-flex;
+	.profile-img{
+		width: 10%;
+		margin-top: 4%;
+	}
+	.submit{
+		display: inline-flex;
+		margin-left: 2%;
+		width: auto;
+	}
+	padding: 1em 0em;
+}
+
 
 	.flash{
 		padding: .8em;
@@ -396,7 +464,6 @@ a:hover{
 	align-items: center;
 }
 .controls{
-	width: 20%;
 	line-height: 2rem;
 }
 .controls ul{
