--- a/globe/templates/feed.html
+++ b/globe/templates/feed.html
@@ -5,39 +5,7 @@
 
 <section class="remodal-bg">
 	<div class="container-fluid no-padding" id="feed-main_controls">
-		<div class="row no-gutters" style="width:100%;">
-			<div class="col-xs-12 col-sm-3">
-			  <div class="maximised-f" id="filter-parent">
-				<div class="card filter" id="filter-main">
-					<div class="head ui">
-						<h3>Filter Posts</h3>
-					</div>
-					<div class="body">
-						<a href="#0" id="toggleFilter">Toggle View</a>
-						<form action="/feed/filter/" method="post" id="feed-filter">
-							<div class="form-check-wrapper">
-								<div class="form-check">
-									<input checked class="form-check-input" id="exampleRadios1" name=
-									"exampleRadios" type="radio" value="option1"> <label class=
-									"form-check-label" for="exampleRadios1">Your Feed</label>
-								</div>
-								<div class="form-check">
-									<input checked class="form-check-input" id="exampleRadios1" name=
-									"exampleRadios" type="radio" value="option1"> <label class=
-									"form-check-label" for="exampleRadios1">Trending</label>
-								</div>
-								<div class="form-check">
-									<input checked class="form-check-input" id="exampleRadios1" name=
-									"exampleRadios" type="radio" value="option1"> <label class=
-									"form-check-label" for="exampleRadios1">Country</label>
-								</div>
-							</div>
-							<button class="btn btn-outline text-center">Apply</button>
-						</form>
-					</div>
-				</div><!--/filter-->
-			  </div>
-			</div>
+			<!--
 			<div class="col-xs-12 col-sm-offset-4 col-sm-5" style="margin-left: 4%;">
 				<div class="card" id="feed-upload">
 					{% if current_user.is_authenticated %}
@@ -62,11 +30,41 @@
 					{% endif %}
 				</div>
 			</div>
-		</div><!--/row-->
+			-->
 	</div><!--/feed-main_controls-->
-</section>
+
 
 <section class="remodal-bg" id="feed-main_posts">
+	<div class="minimised-f" id="filter-parent">
+	  <div class="card filter" id="filter-main">
+		  <div class="head ui">
+			  <h3>Filter Posts</h3>
+		  </div>
+		  <div class="body">
+			  <a href="#0" id="toggleFilter">Toggle View</a>
+			  <form action="/feed/filter/" method="post" id="feed-filter">
+				  <div class="form-check-wrapper">
+					  <div class="form-check">
+						  <input checked class="form-check-input" id="exampleRadios1" name=
+						  "exampleRadios" type="radio" value="option1"> <label class=
+						  "form-check-label" for="exampleRadios1">Your Feed</label>
+					  </div>
+					  <div class="form-check">
+						  <input checked class="form-check-input" id="exampleRadios1" name=
+						  "exampleRadios" type="radio" value="option1"> <label class=
+						  "form-check-label" for="exampleRadios1">Trending</label>
+					  </div>
+					  <div class="form-check">
+						  <input checked class="form-check-input" id="exampleRadios1" name=
+						  "exampleRadios" type="radio" value="option1"> <label class=
+						  "form-check-label" for="exampleRadios1">Country</label>
+					  </div>
+				  </div>
+				  <button class="btn btn-outline text-center">Apply</button>
+			  </form>
+		  </div>
+	  </div><!--/filter-->
+	</div>
 	<div class="container">
 		<div class="row align-items-center justify-content-center">
 			{% for post in posts %}
