Fix profile link

--- a/globe/templates/lightbox.html
+++ b/globe/templates/lightbox.html
@@ -13,11 +13,11 @@
 	</div>
 	<div class="bottom-nav">
 		<div class="profile">
-			<a href="/user/{{post.user.username}}/profile/" class="no-margin">
+			<a href="/profile/{{post.user.username}}/" class="no-margin">
 				<img class="img img-circle profile-thumb" height="50px" src="/static/img/default_profile.jpg" width="50px">
 			</a>
 			<!--<img src={{post.user.photo}} alt="users profile picture">-->
-			<a href="/user/{{post.user.username}}/profile/"><b class="post-caption">{{post.user.username}}</b></a>
+			<a href="/profile/{{post.user.username}}/"><b class="post-caption">{{post.user.username}}</b></a>
 			<p class="post-caption">{{post.postContent}}</p>
 		</div>
 		<div class="likes-counter">
