--- a/globe/static/scss/main.scss
+++ b/globe/static/scss/main.scss
@@ -59,7 +59,7 @@
 	 h1, h4, p, a{
 		 color: #f0f0f0 !important;
 		text-align: left;
-		text-shadow: $textShadow;
+		text-shadow: text-shadow;
 	}
 }
 
@@ -96,7 +96,7 @@
 		font-size: 4em;
 		margin: 1em auto .5em auto;;
 		text-align: center;
-		text-shadow: $textShadow;
+		text-shadow: text-shadow;
 	}
 	.register-cta{
 		display: block;
@@ -106,7 +106,7 @@
 		font-size: 1.3em;
 		a{
 			color: #fff !important;
-			text-shadow: $textShadow;
+			text-shadow: text-shadow;
 		}
 	}
 }
@@ -123,7 +123,7 @@
 		font-size: 4em;
 		margin: 1em auto .5em auto;
 		text-align: center;
-		text-shadow: $textShadow;
+		text-shadow: text-shadow;
 	}
 	.card{
 		label{
@@ -142,6 +142,6 @@
 	}
 	a{
 		color: #fff !important;
-		text-shadow: $textShadow;
+		text-shadow: text-shadow;
 	}
 }
