--- a/globe/templates/user/profile.html
+++ b/globe/templates/user/profile.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <body>
-<section>
+<section class="remodal-bg">
 	<div class="profile-header">
 		<div class="row">
 			<div class="col-xs-12 col-md-2">
@@ -17,26 +17,21 @@
 				<div class="profile-header-intro">
 					<h1>{{user.forename}} {{user.surname}}</h1>
 					<p><a href="/profile/{{user.username}}">@{{user.username}}</a></p>
-					{% if ownProfile %}
-						<h4>
-							{{user.city}}
-							<a href="#update-city"><i class="far fa-edit"></i></a>
-						</h4>
-					{% else %}
-						<h4>{{user.city}}</h4>
-					{% endif %}
+					<h4>{{user.city}}</h4>
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-2">
 				{% if ownProfile %}
-					<a href="#update-profile" class="btn btn-outline follow">Update Profile Picture</a>
+					<a href="#update-profile" style="color: #fff !important; margin-top: 5%;">Update Profile Picture</a>
 				{% else %}
-					<a href="/user/follow/{{user.id}}" class="btn btn-outline follow">Follow</a>
+					<a href="/user/follow/{{user.id}}" style="color: #fff !important; margin-top: 5%;">Follow</a>
 				{% endif %}
 			</div>
 		</div>
 	</div>
 	<div class="container">
+		<div class="flash">
+		</div>
 		<div class="profile-main_gallery">
 			<div class="row ma-1">
 				<div class="col text-left">
@@ -71,9 +66,17 @@
 			<h2 class="section-heading">About</h2>
 				{% if ownProfile %}
 					{% if user.biography == 'None' %}
-						<input type="text" class="faux-input" value="Tell us about yourself">
+						<form id="bio">
+							<input type="text" class="faux-input" name="bio" id="biog" placeholder="Tell us about yourself">
+							<input type="hidden" name="user" id="user" value="{{user.id}}">
+							<button type="submit" class="submit btn btn-glb"><i class="fa fa-paper-plane"></i>   update</button>
+						</form>
 					{% else %}
-						<input type="text" class="faux-input" value="Tell us about yourself">
+						<form id="bio">
+							<input type="text" class="faux-input" name="bio" id="biog" value="{{user.biography}}">
+							<input type="hidden" name="user" id="user" value="{{user.id}}">
+							<button type="submit" class="submit btn btn-glb"><i class="fa fa-paper-plane"></i>   update</button>
+						</form>
 					{% endif %}
 				{% else %}
 					{% if user.biography == 'None' %}
@@ -119,16 +122,55 @@
 			</div>
 		</div>
 	</div><!--/container-->
+	{% if ownProfile %}
+	<div class="remodal" data-remodal-id="update-profile">
+		<button class="remodal-close" data-remodal-action="close"></button>
+		<form class="no-style" id="update-photo" action="/user/profile/edit/photo/" enctype="multipart/form-data" method="post">
+			<div id="remodal-wrapper">
+				<input type="hidden" value="{{current_user.id}}" name="id">
+
+				<input type="file" id="image" name="image" class="form-control">
+
+				<a href="#0" class="btn btn-danger mt-3" data-remodal-action="close">Cancel</a>
+
+				<button type="submit" class="btn btn-glb" id="btn-submit"> Update </button>
+			</div><!--/remodal-wrapper-->
+		</form>
+	</div>
+	{% endif %}
 </section>
 <script>
-$(document).scroll(function () {
-    var y = $(this).scrollTop();
-    if (y > 385) {
-        $('.profile-header-collapse').fadeIn("smooth");
-    } else if (y < 385){
-        $('.profile-header-collapse').fadeOut("smooth");
-    }
+$('#bio').on('submit', function updateBio(e){
+	var data =
+	{ "id": $('#user').val(),
+	"bio": $('#biog').val()};
 
-});
+	console.log(data);
+
+	$.ajax({
+		url: '/user/profile/edit/bio/',
+		data: JSON.stringify(data),
+		type: 'POST',
+		contentType: 'application/json;charset=UTF-8',
+		success: function(response) {
+			console.log(response['msg']);
+			var msg = response['msg'].toString();
+			console.log(msg);
+			$('.flash').removeClass("danger").addClass("success");
+			$('.flash').html(msg);
+			$('.flash').show();
+			$('.flash').delay(1000).fadeOut(2000);
+		},
+		error: function(error, data) {
+			console.log(data);
+			$('.flash').removeClass("success").addClass("danger");
+			$('.flash').html("Something went wrong...");
+			$('.flash').show();
+			$('.flash').delay(1000).fadeOut(2000);
+		}
+	});
+	e.preventDefault();
+}
+);
 </script>
 {% endblock %}
