--- a/globe/templates/user/profile.html
+++ b/globe/templates/user/profile.html
@@ -30,8 +30,6 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="flash">
-		</div>
 		<div class="profile-main_gallery">
 			<div class="row ma-1">
 				<div class="col text-left">
@@ -49,12 +47,12 @@
 								"https://cdn.pannellum.org/2.3/pannellum.htm#panorama={{post.image}}"
 								style="border-style:none;" width="100%"></iframe>
 								<div class="footer text-center">
-									<a href="/post/3d/{{post.id}}">view in lightbox</a>
+									<a href="/post/{{post.id}}">view in lightbox</a>
 								</div>
     						{% else %}
               					<img src="{{post.image}}" alt="{{post.postContent}}" width="100%" height="250px">
 								<div class="footer text-center">
-									<a href="/post/2d/{{post.id}}">view in lightbox</a>
+									<a href="/post/{{post.id}}">view in lightbox</a>
 								</div>
 							{% endif %}
             			</div>
@@ -161,7 +159,7 @@ $('#bio').on('submit', function updateBio(e){
 			$('.flash').show();
 			$('.flash').delay(1000).fadeOut(2000);
 		},
-		error: function(error, data) {
+		error: function(data) {
 			console.log(data);
 			$('.flash').removeClass("success").addClass("danger");
 			$('.flash').html("Something went wrong...");
