--- a/globe/templates/map.html
+++ b/globe/templates/map.html
@@ -11,10 +11,11 @@
 			<span>Showing {{count}} pins in 50mi radius</span>
 			<div class="search">
 				<form action="/explore/" method="get">
-					<input type="text" class="form-control" name="filter" placeholder="Rome, Athens, London"/>
+					<input type="text" class="form-control" name="filter" placeholder="Edinburgh"/>
 					<input type="submit" class="btn btn-glb" value="Explore"/>
 				</form>
 			</div>
+			<p>Globe is still in early development, so all posts are locked to Edinburgh for the time being. Sorry :(</p>
 		</div>
 	</div>
 
@@ -31,18 +32,19 @@ jQuery(function($) {
 });
 
 function initialize() {
+	var styles = [{"featureType":"all","elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#000000"},{"lightness":40}]},{"featureType":"all","elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#000000"},{"lightness":16}]},{"featureType":"all","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":17},{"weight":1.2}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":21}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":16}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":19}]},{"featureType":"water","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":17}]}];
+
     var map;
     var bounds = new google.maps.LatLngBounds();
     var mapOptions = {
 	    mapTypeId: 'roadmap',
 		center: '{{center}}',
-		zoom: 1
+		styles: styles
 	}
 
     // Display a map on the page
     map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
     map.setTilt(45);
-
     // Multiple Markers
     var markers = [
 		{% for post in posts %}
@@ -54,8 +56,10 @@ function initialize() {
     var infoWindowContent = [
 		{% for post in posts %}
         	['<div class="info_content">' +
-        	'<h5><a href="/post/{{post.id}}">View</a></h5>' +
-        	'<p>{{post.postContent}}</p>' +
+			"<img width='100px' height='100px' src='{{post.image}}'> "+
+        	"<a href='/post/{{post.id}}'>" +
+				"<h4>open</h4>" +
+			'</a>' +
 			'</div>'],
 		{% endfor %}
     ];
@@ -70,7 +74,8 @@ function initialize() {
         marker = new google.maps.Marker({
             position: position,
             map: map,
-            title: markers[i][0]
+            title: markers[i][0],
+			icon: "https://s3-us-west-2.amazonaws.com/elasticbeanstalk-us-west-2-908893185885/static/map-marker..png"
         });
 
         // Allow each marker to have an info window
@@ -87,10 +92,11 @@ function initialize() {
 
     // Override our map zoom level once our fitBounds function runs (Make sure it only runs once)
     var boundsListener = google.maps.event.addListener((map), 'bounds_changed', function(event) {
-        this.setZoom(1);
+        this.setZoom(10);
         google.maps.event.removeListener(boundsListener);
     });
 
+	/*
 	var map_moved = google.maps.event.addListener((map), 'center_changed', function(event) {
         center = map.getCenter();
 		var lattitude = center.lat();
@@ -116,7 +122,7 @@ function initialize() {
 				window.location.href = location;
 			}
 		});
-	}
+	} */
 
 
 }
