--- a/globe/templates/search.html
+++ b/globe/templates/search.html
@@ -2,11 +2,11 @@
 {% block content %}
 
 
-<section class="light" id="search-main">
+<section class="search-main">
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h1> Search</h1>
+				<h1>Search</h1>
 			</div>
 		</div>
 
@@ -14,15 +14,23 @@
 			<div class="col">
 				<form action="/search/" method="post">
 
-					<label for="params">Enter a search term</label>
+					<label for="params">For</label>
 					<input type="text" class="form-control" name="params">
 
-					<input type="text" class="form-control" name="category" value="post"/>
-					<button type="submit" class="btn btn-glb">Search</button>
+					<label for="params">In</label>
+					<select name="category" class="form-control">
+						<option selected="selected" value="posts">Posts</option>
+						<option value="users">Users</option>
+					</select>
+					<button type="submit" class="btn btn-glb">Go</button>
 				</form>
 			</div>
 		</div>
 	</div>
 </section>
+
+{% if results %}
+	{% extends 'search_results.html %'}
+{% endif %}
 
 {% endblock %}
