--- a/globe/templates/user/profile.html
+++ b/globe/templates/user/profile.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <body>
-<section class="remodal-bg">
+<section class="remodal-bg no-padding">
 	<div class="profile-header">
 		<div class="row">
 			<div class="col-xs-12 col-md-2">
